# ros-playground

./: .gitignore  Dockerfile  docker-compose.yaml  stow_pattern_calibration.rviz
.devcontainer/: devcontainer.json
configs/: .p10k.zsh  .zshrc  terminator_config
workspaces/: README
workspaces/hrwros_ws/src/hrwros_week1/launch/: hrwros_sensor.launch
workspaces/hrwros_ws/src/pub_sub_test/: CMakeLists.txt  package.xml
workspaces/hrwros_ws/src/pub_sub_test/launch/: pub_sub_test.launch
workspaces/hrwros_ws/src/pub_sub_test/msg/: SensorInformation.msg
workspaces/hrwros_ws/src/pub_sub_test/scripts/: pub.py  sub.py
workspaces/hrwros_ws/src/utils/: CMakeLists.txt  package.xml  setup.py
workspaces/hrwros_ws/src/utils/src/utils/: __init__.py  rospy_wrapper.py
workspaces/robot_four/: dep_packages
workspaces/robot_four/src/robot_model/: CMakeLists.txt  package.xml
workspaces/robot_four/src/robot_model/launch/: robot_xacro.launch
workspaces/robot_four/src/robot_model/urdf/: robot.gazebo  robot.xacro
workspaces/robotics/src/my_robot/: package.xml
workspaces/robotics/src/my_robot/config/: my_robot.rviz
workspaces/robotics/src/my_robot/launch/: view_robot.launch
workspaces/robotics/src/my_robot/src/: joint_mover.py
workspaces/robotics/src/my_robot/urdf/: my_robot.urdf
