cmake_minimum_required(VERSION 2.8.3)
project(pub_sub_test)
find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs std_msgs trajectory_msgs message_generation moveit_msgs actionlib actionlib_msgs hrwros_utilities)

################################################
## Declare ROS messages, services and actions ##
################################################

## Generate messages in the 'msg' folder
add_message_files(DIRECTORY msg
  FILES
  SensorInformation.msg
)

## Generate messages in the 'srv' folder
# add_service_files(DIRECTORY srv
#   FILES
# )

## Generate messages in the 'action' folder
# add_action_files(DIRECTORY action
#   FILES
# )

## Generate added messages and services with any dependencies listed here
generate_messages(
  DEPENDENCIES
  std_msgs
  geometry_msgs
  trajectory_msgs
  moveit_msgs
  actionlib_msgs
)

catkin_package(
  CATKIN_DEPENDS  message_runtime roscpp geometry_msgs std_msgs trajectory_msgs moveit_msgs actionlib_msgs hrwros_utilities
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)