<?xml version="1.0"?>
<package format="2">
  <name>pub_sub_test</name>
  <version>0.0.0</version>
  <description>The pub_sub_test package</description>

  <maintainer email="developer@todo.todo">Pyae</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>hrwros_utilities</depend>
</package>
